test-coverage profile added